--- a/style.css
+++ b/style.css
@@ -3,4 +3,28 @@ body {
 }
 li{
   list-style: none;
+   float: left;
+}
+
+
+.header {
+  background-color: #f7f2b4;
+  height: 90px;
+}
+
+/* header-logoの文字の大きさを36px、floatプロパティをleftにしてください */
+.header-logo{
+  font-size: 36px;
+  float: left;
+ 
+}
+
+.main {
+  background-color: #bdf7f1;
+  height: 600px;
+}
+
+.footer {
+  background-color: #ceccf3;
+  height: 270px;
 }
